# Solver_GTO_new

./: .gitignore  CMakeLists.txt  Dockerfile
.github/workflows/: ci.yml
core/: deck.cpp  deck.hpp
gto/: game_state.h
include/gto/: action_abstraction.h  cfr_engine.h  common_types.h  game_state.h  game_utils.hpp  information_set.h
src/: CMakeLists.txt  action_abstraction.cpp  cfr_engine.cpp  game_state.cpp  game_utils.cpp  information_set.cpp  main.cpp
src/core/: bitboard.cpp  bitboard.hpp  cards.cpp  cards.hpp  deck.cpp  deck.hpp
src/eval/: CMakeLists.txt  hand_evaluator.cpp  hand_evaluator.hpp  hand_ranks_loader.cpp  pokerlib_wrapper.c
tests/: CMakeLists.txt  action_abstraction_tests.cpp  bench_eval.cpp  bitboard_tests.cpp  cards_tests.cpp  cfr_engine_tests.cpp  eval_tests.cpp  information_set_tests.cpp  test_main.cpp
tests/data/: 7card_cases.csv
tools/: gen_lookup_tables.py
